Fixed spacing on logged in state

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,6 +179,21 @@ html, body {
   border: 2px solid rgba(133,197,151, 0.1);
 }
 
+.logoutButton {
+  display: block;
+  width: 45%;
+  margin: 45% 27.5% 4%;
+  font-weight: 300;
+  text-align: center;
+  font-size: 4vw;
+  background: #85C597;
+  color: #f0f0f0;
+  border: 2px solid rgba(133,197,151, 0.1);
+  height: 7vw;
+  line-height: 7vw;
+  cursor: pointer;
+}
+
 #mainPage #ChefPartial .Container .titleBlock {
   position: relative;
   margin-top: 0%;
@@ -292,7 +307,8 @@ html, body {
   padding: 0% 5% 5% 5%;
 }
 #mainPage #paymentPartial #paymentDetails.Container .cardDetails.removePadding {
-  padding-top: 0%;
+  padding: 0%;
+  display: none;
 }
 #mainPage #paymentPartial #paymentDetails.Container .cardDetails input {
   font-size: 4vw;
